[FIX] 이미지 업로드 버그 수정 작업 2차